# origin_novel

./: LICENSE  README.md  analysis_options.yaml  build.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: rust.yml
android/app/: build.gradle.kts
docs/: project_structure_guidelines.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/constant/: app_preference_keys.dart
lib/app/constants/: default_setting.dart
lib/app/database/: app_database.dart
lib/app/i18n/: strings.g.dart  strings_en.g.dart  strings_zh_CN.g.dart  translations.g.dart
lib/constant/: app_preference_keys.dart
lib/extensions/: extensions.dart
lib/global_providers/: theme_provider.dart
lib/localization/: strings.g.dart  strings_zh_CN.g.dart  translations.g.dart  translations_en.g.dart  translations_zh_CN.g.dart
lib/preference/: app_preference.dart
lib/src/: orgin_novel.dart
lib/util/: log_utils.dart  platform_util.dart  split_page_util.dart
linux/: CMakeLists.txt  my_application.cc
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  parse_book_source_api.rs  search_book_api.rs
rust/src/api/helper/: content_helper.rs  mod.rs
rust/src/api/model/: book_source.rs  mod.rs  rule_book_info.rs  rule_content.rs  rule_explore.rs  rule_review.rs  rule_search.rs  rule_toc.rs  rule_type.rs  rule_view.rs  search_book.rs
rust/src/api/model/rule/: mod.rs  rule_book_info.rs  rule_content.rs  rule_explore.rs  rule_review.rs  rule_search.rs  rule_toc.rs  rule_type.rs
rust/src/api/util/: jsoup_util.rs  mod.rs  regex_util.rs
rust/src/assets/: book_source.json  search.html
script/: add_new_feature.sh
script/generators/: generate_barrel_files.sh
script/nu/: add_new_feature.nu
script/utils/: file_utils.sh  string_utils.sh  validators.sh
test/: test.dart  widget_test.dart
web/: index.html  manifest.json
windows/runner/: Runner.rc  flutter_window.cpp
(+175 files in other folders)
