[package]
name = "rust_lib_origin_novel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = { version = "=2.0.0", features = ["chrono"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = "0.4.38"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1", features = ["rt", "test-util", "macros"] }
jsonpath-rust = "0.6.1"
once_cell = "1.19.0"
regex = "1.10.5"
parcel_selectors = "0.26.5"