[package]
name = "rust_lib_origin_novel"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = { version = "=2.1.0", features = ["chrono"] }
# 网络请求
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# 时间
chrono = "0.4"
# 异步
tokio = { version = "1", features = ["rt", "test-util", "macros"] }
# 懒加载
once_cell = "1"
# 解析所用
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
jsonpath-rust = "0.6"
regex = "1"
dom_query = "0.3"
# 日志配置
log = "0.4"
env_logger = "0.11"
